<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="544dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonAddPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nitc_mag_e"
                android:textColor="#03A9F4"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="54dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="All article"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButtonAddPost"
        app:tabIndicatorColor="#03A9F4"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#03A9F4"
        app:tabTextColor="#618C8F">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/technical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technical" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fest" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/educational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educational" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#03A9F4"
        android:contentDescription="add post"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />


</androidx.constraintlayout.widget.ConstraintLayout>